--- a/index.html
+++ b/index.html
@@ -1,1 +1,25 @@
-bonjour
+<html>
+
+<head>
+        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+        <link rel="stylesheet" href="style.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+        <script type="text/javascript" src="script/test.js"></script>
+       
+</head>
+
+<body>
+        <header></header>
+        <form action="" id="formVille">
+                <input type="text" id="nomville" name="nomville">
+                <input type="submit" value="Il fait combien ?">
+        </form>
+        <div id="meteo">
+                <h1 id="ville"></h1>
+                <h2 id="temperature1"></h2>
+        </div>
+
+        <footer></footer>
+</body>
+
+</html>
