--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 <body>
         <header></header>
+        <h1>Test</h1>
         <form action="" id="formVille">
                 <input type="text" id="nomville" name="nomville">
                 <input type="submit" value="Il fait combien ?">
