--- a/index.html
+++ b/index.html
@@ -2,13 +2,24 @@
 
 <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" type="text/css" href="/css/materialize.css">
+     	<link rel="stylesheet" type="text/css" href="css/materialize.min.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <script type="text/javascript" src="script/test.js"></script>
        
 </head>
 
 <body>
+	<nav>
+                <div class="nav-wrapper">
+                  <a href="#" class="brand-logo">Logo</a>
+                  <ul id="nav-mobile" class="right hide-on-med-and-down">
+                    <li><a href="sass.html">Sass</a></li>
+                    <li><a href="badges.html">Components</a></li>
+                    <li><a href="collapsible.html">JavaScript</a></li>
+                  </ul>
+                </div>
+        </nav>
         <header></header>
         <form action="" id="formVille">
                 <input type="text" id="nomville" name="nomville">
