--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 
 <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-     	<link rel="stylesheet" type="text/css" href="css/materialize.min.css">
+         <link rel="stylesheet" type="text/css" href="materialize/css/materialize.min.css">
+         <link rel="stylesheet" type="text/css" href="style.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <script type="text/javascript" src="script/test.js"></script>
        
@@ -20,7 +21,7 @@
                 </div>
         </nav>
         <header></header>
-        <h1>Test</h1>
+        <h1>Température actuelle</h1>
         <form action="" id="formVille">
                 <input type="text" id="nomville" name="nomville">
                 <input type="submit" value="Il fait combien ?">
@@ -50,7 +51,7 @@
           </div>
           <div class="footer-copyright">
             <div class="container">
-            © 2014 Copyright Text
+            © 2018 Copyright Text
             <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
             </div>
           </div>
